# speaker_recognition

./: README.md
420_testbench/: 420_testbench.files  420_testbench.includes  CMakeLists.txt  codebook.h  codebook2.h  ece420_lib.cpp  ece420_lib.h  kiss_fft  main.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_debug.h  audio_common.cpp  audio_common.h  audio_main.cpp  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  codebook2.h  debug_utils.cpp  debug_utils.h  ece420_lib.cpp  ece420_lib.h  ece420_main.cpp  ece420_main.h  ndk-stl-config.cmake
app/src/main/java/com/ece420/lab4/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
